[package]
name = "bevymud"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
async-net = "2.0.0"
bevy = "0.16.1"
libmudtelnet = "2.0.1"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "mysql", "tls-native-tls", "migrate"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
